--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="footer-column">
                 <h3>Contact</h3>
                 <p><i class="fas fa-phone"></i> +91-9606701194</p>
-                <p><i class="fas fa-envelope"></i> mohammeduvez29@gmail.com</p>
+                <p><i class="fas fa-envelope"></i> mohammeduvezkhan@gmail.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> 161 Khairun Manzil, Horatti village, Kenjige Post, Mudigere Taluk, Chikkamagaluru District, Karnataka, India 577113</p>
             </div>
             <div class="footer-column">
