--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <div class="footer-column">
                 <h3>Contact</h3>
                 <p><i class="fas fa-phone"></i> +91-9606701194</p>
-                <p><i class="fas fa-envelope"></i> <a href="mailto:mohammeduvez29@gmail.com">mohammeduvez29@gmail.com</a></p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:mohammeduvezkhan@gmail.com">mohammeduvez29@gmail.com</a></p>
                 <p><i class="fas fa-map-marker-alt"></i> 161 Khairun Manzil, Horatti village, Kenjige Post, Mudigere Taluk, Chikkamagaluru District, Karnataka, India 577113</p>
             </div>
             <div class="footer-column">
