--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="resume-content">
                     <p>Download my resume to learn more about my qualifications and experience:</p>
-                    <a href="Mohammed_Uvez_Khan_Resume.pdf" class="resume-download" download>
+                    <a href="Resume.pdf" class="resume-download" download>
                         <i class="fas fa-file-download"></i> Download Resume (PDF)
                     </a>
                 </div>
