--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="about">
             <h2>&lt;About_Me&gt;</h2>
             <div class="about-content">
-                <img src="mic.png" alt="Mohammed Uvez Khan" id="mic" />
+                <img src="Images/mic.png" alt="Mohammed Uvez Khan" id="mic" />
                 <div class="about-text">
                     <p>
                         I am currently pursuing a Bachelor of Technology (BTech) in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine Learning (AIML) at Dayananda Sagar University. I have built a strong foundation in programming, algorithms, and data analysis, focusing on AI and Machine Learning.
@@ -57,7 +57,7 @@
             <h2>&lt;Experience&gt;</h2>
             <div class="experience-container">
                 <div class="experience-item">
-                    <img src="infosys.jpeg" alt="Infosys Logo" class="company-logo">
+                    <img src="Images/infosys.jpeg" alt="Infosys Logo" class="company-logo">
                     <div class="experience-content">
                         <h3>Infosys SpringBoard | Python Programming Intern</h3>
                         <p class="date">November 2024 - Present</p>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="experience-item">
-                    <img src="microsoft.png" alt="Microsoft Logo" class="company-logo">
+                    <img src="Images/microsoft.png" alt="Microsoft Logo" class="company-logo">
                     <div class="experience-content">
                         <h3>Microsoft | Microsoft Learn Student Ambassador</h3>
                         <p class="date">July 2024 - Present</p>
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="experience-item">
-                    <img src="geeksforgeeks.jpg" alt="GeeksforGeeks Logo" class="company-logo">
+                    <img src="Images/geeksforgeeks.jpg" alt="GeeksforGeeks Logo" class="company-logo">
                     <div class="experience-content">
                         <h3>GeeksforGeeks | Campus Mantri</h3>
                         <p class="date">July 2024 - Present</p>
@@ -101,7 +101,7 @@
             <div class="project-grid">
                 <div class="project-card">
                     <div class="card-front">
-                        <img src="project1.jpg" alt="Facial Recognition Model" class="project-image">
+                        <img src="Images/project1.jpg" alt="Facial Recognition Model" class="project-image">
                         <div class="project-title">
                             <h3>Facial Recognition Model</h3>
                         </div>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="project-card">
                     <div class="card-front">
-                        <img src="project2.jpeg" alt="Credit Card Fraud Detection" class="project-image">
+                        <img src="Images/project2.jpeg" alt="Credit Card Fraud Detection" class="project-image">
                         <div class="project-title">
                             <h3>Credit Card Fraud Detection</h3>
                         </div>
@@ -134,11 +134,11 @@
             <h2>&lt;Resume&gt;</h2>
             <div class="resume-container">
                 <div class="resume-preview">
-                    <img src="Resume.jpg?height=400&width=300" alt="Resume Preview" class="resume-image">
+                    <img src="Images/Resume.jpg?height=400&width=300" alt="Resume Preview" class="resume-image">
                 </div>
                 <div class="resume-content">
                     <p>Download my resume to learn more about my qualifications and experience:</p>
-                    <a href="Resume.pdf" class="resume-download" download>
+                    <a href="PDF/Resume.pdf" class="resume-download" download>
                         <i class="fas fa-file-download"></i> Download Resume (PDF)
                     </a>
                 </div>
@@ -150,7 +150,7 @@
         <section id="connect">
             <h2>&lt;Connect_With_Me&gt;</h2>
             <div class="connect-content">
-                <img src="selfie.jpg?height=150&width=150" alt="Mohammed Uvez Khan" class="connect-image">
+                <img src="Images/selfie.jpg?height=150&width=150" alt="Mohammed Uvez Khan" class="connect-image">
                 <div class="social-links">
                     <a href="https://github.com/mohammeduvez29" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
                     <a href="https://www.linkedin.com/in/mohammeduvezkhan/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
