--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <section id="connect">
             <h2>&lt;Connect_With_Me&gt;</h2>
             <div class="connect-content">
-                <img src="Images/selfie.jpg" alt="Mohammed Uvez Khan" class="connect-image">
+                <img src="Images/selfie.jpg?height=150&width=150" alt="Mohammed Uvez Khan" class="connect-image">
                 <div class="social-links">
                     <a href="https://github.com/mohammeduvez29" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
                     <a href="https://www.linkedin.com/in/mohammeduvezkhan/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
