--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
                         <a href="https://github.com/mohammeduvez29/Facial-Recognition-Model" class="project-link">View Project</a>
                     </div>
                 </div>
+                 <div class="project-card">
+                    <div class="card-front">
+                        <img src="Images/project3.jpeg" alt="Image Enhancer" class="project-image">
+                        <div class="project-title">
+                            <h3>Image Enhancer</h3>
+                        </div>
+                    </div>
+                    <div class="card-back">
+                        <h3>Image Enhancer </h3>
+                        <p>ESRGAN based Image Enhancer to increase the resolution and quality of blurry images.</p>
+                        <a href="https://github.com/mohammeduvez29/Image-Enhancer" class="project-link">View Project</a>
+                    </div>
+                </div>
                 <div class="project-card">
                     <div class="card-front">
                         <img src="Images/project2.jpeg" alt="Credit Card Fraud Detection" class="project-image">
